<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="false"
                android:text="@string/question1_choice1" />

            <RadioButton
                android:id="@+id/question1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="false"
                android:text="@string/question1_choice2" />

            <RadioButton
                android:id="@+id/question1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="false"
                android:text="@string/question1_choice3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:text="@string/question2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question2_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <CheckBox
            android:id="@+id/question3_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:id="@+id/question3_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice2"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:id="@+id/question3_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice3"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:id="@+id/question3_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice4"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:text="@string/question4"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>


        <EditText
            android:id="@+id/question4_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"/>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_choice1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <RadioButton
                android:id="@+id/question5_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_choice2"
                android:layout_marginLeft="10dp" />

            <RadioButton
                android:id="@+id/question5_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_choice3"
                android:layout_marginLeft="10dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question5_answer"
            android:text="@string/question6"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question6_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/question7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>


        <CheckBox
            android:id="@+id/question7_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7_choice1"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:id="@+id/question7_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7_choice2"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:id="@+id/question7_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7_choice3"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:id="@+id/question7_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7_choice4"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question8_answer"
            android:text="@string/question8"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/question8_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/question9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:text="@string/question9"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question9_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/question9_choice1" />

            <RadioButton
                android:id="@+id/question9_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/question9_choice2" />

        </RadioGroup>

        <TextView
            android:id="@+id/question10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:labelFor="@+id/question10_answer"
            android:text="@string/question10"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question10_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:imeOptions="actionDone"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
             >

            <Button
                android:id="@+id/restart"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="restartButton"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="20dp"
                android:text="Reset" />

            <Button
                android:id="@+id/submit_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="right"
                android:onClick="submitAnswers"
                android:text="@string/submit_answers" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>